# account_book

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_rename_users_account_user.py  0004_transactionhistory_delete_transaction_history.py  0005_remove_transactionhistory_transfer_method_and_more.py  0005_transaction.py
analysis/: ai.py  analyzers.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_alter_analysis_type.py  0003_analysis_summary.py
config/: local.py  prod.py  settings.py  urls.py
config/settings/: __init__.py  local.py  prod.py  settings.py
notification/: models.py  signals.py  tests.py  urls.py  views.py
notification/migrations/: 0001_initial.py
users/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at_and_more.py
