[project]
name = "account-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.3",
    "djangorestframework>=0.0.1",
    "djangorestframework-simplejwt>=5.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "isort>=6.0.1",
]

[tool.setuptools]
packages = ["accounts", "users", "config"]

[tool.isort]
profile = "black"

